

AC_INIT([libnbtpp],[0.1],[zpmarvel@gmail.com])
AC_CONFIG_SRCDIR([src/nbt.cpp])
AM_INIT_AUTOMAKE([foreign subdir-objects])
AM_MAINTAINER_MODE([enable])
LT_INIT

AC_PROG_CC
AC_PROG_CXX
dnl This is required for the AC_CHECK_HEADER tests
AC_LANG(C++)
AC_PROG_RANLIB

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
